# nagashi-somen

./: .editorconfig  .gitignore  LICENSE.txt  README.md  pyproject.toml
src/nagashi_somen/: __about__.py  __init__.py  __main__.py  core.py
src/nagashi_somen/cli/: __init__.py
tests/: docker-compose.yml
tests/mysql/: Dockerfile  my.cnf
tests/mysql/docker-entrypoint-initdb.d/: 01-init.sql
